# spamnt

./: Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
src/spamnt/: __main__.py  bot.py
src/spamnt/ext/: timer.py
src/spamnt/utils/: config.py
